--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,26 +1,24 @@
 {
-  "name": "consultoria-tecnologia",
+  "name": "tech-consultoria-frontend",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.13.4",
-    "mongodb": "^7.0.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-router-dom": "^7.13.0"
+    "axios": "^1.7.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.1.1",
+    "@vitejs/plugin-react": "^4.3.1",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "eslint": "^9.39.1",
@@ -28,6 +26,6 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "express": "^5.2.1",
     "globals": "^16.5.0",
-    "vite": "^7.2.4"
+    "vite": "^5.4.0"
   }
 }
