--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,22 +10,15 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "nodemailer": "^7.0.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.1",
-    "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.3",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "cors": "^2.8.6",
-    "dotenv": "^17.2.3",
-    "eslint": "^9.39.1",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.24",
-    "express": "^5.2.1",
-    "globals": "^16.5.0",
     "vite": "^5.4.0"
   }
 }
