--- a/backend/package.json
+++ b/backend/package.json
@@ -7,17 +7,22 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["consultoria", "tecnologia", "api"],
+  "keywords": [
+    "consultoria",
+    "tecnologia",
+    "api"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "mongoose": "^8.0.3",
-    "bcryptjs": "^2.4.3",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "express-validator": "^7.0.1"
+    "mongoose": "^8.0.3",
+    "nodemailer": "^7.0.13"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
